# emotion-detector

./: pyproject.toml  requirements.txt
