[project]
name = "emotion-detector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gradio>=5.38.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "opencv-python>=4.11.0.86",
    "streamlit>=1.47.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]
